fix(meditation): fixes layout problem with long names

--- a/src/app/meditation/list-entry/list-entry.css
+++ b/src/app/meditation/list-entry/list-entry.css
@@ -3,6 +3,8 @@
 }
 
 .meditation-time {
+  position: relative;
+  top: -3px;
   font-style: italic;
   font-size: 13px;
 }
@@ -47,4 +49,26 @@ button md-spinner {
 .like {
   position: relative;
   top: -3px;
+}
+
+.meditation-name {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 480px) {
+  .meditation-name {
+    max-width: 145px;
+  }
+}
+
+@media screen and (max-width: 355px) {
+  .meditation-name {
+    max-width: 130px;
+  }
+  .status {
+    display: none;
+  }
 }
